--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -4,6 +4,7 @@
 .config/pavucontrol.ini
 .config/mimeapps.list
 .config/Dharkael
+.local/share/applications/
 .config/gtk-3.0
 .config/gtk-2.0
 .xinitrc
