--- a/private_dot_config/alacritty/alacritty.yml
+++ b/private_dot_config/alacritty/alacritty.yml
@@ -663,18 +663,18 @@ live_config_reload: true
 # If the same trigger is assigned to multiple actions, all of them are executed
 # in the order they were defined in.
 key_bindings:
-  #- { key: Paste,                                action: Paste          }
-  #- { key: Copy,                                 action: Copy           }
-  #- { key: L,         mods: Control,             action: ClearLogNotice }
-  #- { key: L,         mods: Control, mode: ~Vi,  chars: "\x0c"          }
-  #- { key: PageUp,    mods: Shift,   mode: ~Alt, action: ScrollPageUp,  }
-  #- { key: PageDown,  mods: Shift,   mode: ~Alt, action: ScrollPageDown }
-  #- { key: Home,      mods: Shift,   mode: ~Alt, action: ScrollToTop,   }
-  #- { key: End,       mods: Shift,   mode: ~Alt, action: ScrollToBottom }
+  #- { key: Paste,                                 action: Paste          }
+  #- { key: Copy,                                  action: Copy           }
+  #- { key: L,      mods: Control,                 action: ClearLogNotice }
+  #- { key: L,      mods: Control,     mode: ~Vi,  chars: "\x0c"          }
+  - { key: K,       mods: alt,         mode: ~Alt, action: ScrollPageUp,  }
+  - { key: J,       mods: alt,         mode: ~Alt, action: ScrollPageDown }
+  - { key: G,       mods: alt,         mode: ~Alt, action: ScrollToTop,   }
+  - { key: G,       mods: alt|Shift,   mode: ~Alt, action: ScrollToBottom }
 
   # Vi Mode
   #- { key: Space,  mods: Shift|Control, mode: Vi, action: ScrollToBottom          }
-  - { key: Space,  mods: Shift|Control,           action: ToggleViMode            }
+  - { key: V,  mods: alt|Shift,           action: ToggleViMode            }
   #- { key: Escape,                      mode: Vi, action: ClearSelection          }
   #- { key: I,                           mode: Vi, action: ScrollToBottom          }
   #- { key: I,                           mode: Vi, action: ToggleViMode            }
@@ -687,7 +687,7 @@ key_bindings:
   #- { key: F,      mods: Control,       mode: Vi, action: ScrollPageDown          }
   #- { key: U,      mods: Control,       mode: Vi, action: ScrollHalfPageUp        }
   #- { key: D,      mods: Control,       mode: Vi, action: ScrollHalfPageDown      }
-  #- { key: Y,                           mode: Vi, action: Copy                    }
+  - { key: Y,                           mode: Vi, action: Copy                    }
   #- { key: Y,                           mode: Vi, action: ClearSelection          }
   #- { key: Copy,                        mode: Vi, action: ClearSelection          }
   #- { key: V,                           mode: Vi, action: ToggleNormalSelection   }
@@ -722,17 +722,20 @@ key_bindings:
   #- { key: N,      mods: Shift,         mode: Vi, action: SearchPrevious          }
 
   # (Windows, Linux, and BSD only)
-  - { key: P,              mods: Control,           action: Paste            }
-  #- { key: C,              mods: Control|Shift,           action: Copy             }
-  #- { key: F,              mods: Control|Shift,           action: SearchForward    }
-  #- { key: B,              mods: Control|Shift,           action: SearchBackward   }
-  #- { key: C,              mods: Control|Shift, mode: Vi, action: ClearSelection   }
-  #- { key: Insert,         mods: Shift,                   action: PasteSelection   }
-  - { key: Key0,           mods: Control,                 action: ResetFontSize    }
-  - { key: Equals,         mods: Control,                 action: IncreaseFontSize }
+  - { key: P,              mods: Control,                   action: Paste            }
+  #- { key: C,              mods: Control|Shift,             action: Copy             }
+  #- { key: F,              mods: Control|Shift,             action: SearchForward    }
+  #- { key: B,              mods: Control|Shift,             action: SearchBackward   }
+  #- { key: C,              mods: Control|Shift, mode: Vi,   action: ClearSelection   }
+  #- { key: Insert,         mods: Shift,                     action: PasteSelection   }
+  - { key: Key0,           mods: Control,                   action: ResetFontSize    }
+  - { key: Equals,         mods: Control,                   action: IncreaseFontSize }
+  - { key: Key0,           mods: alt,                       action: ResetFontSize    }
+  - { key: J,              mods: alt|Shift,                 action: IncreaseFontSize }
+  - { key: K,              mods: alt|Shift,                 action: DecreaseFontSize }
     #- { key: Plus,           mods: Control,                 action: IncreaseFontSize }
   #- { key: NumpadAdd,      mods: Control,                 action: IncreaseFontSize }
-  - { key: Minus,          mods: Control,                 action: DecreaseFontSize }
+  - { key: Minus,          mods: Control,                   action: DecreaseFontSize }
   #- { key: NumpadSubtract, mods: Control,                 action: DecreaseFontSize }
 
   # (Windows only)
