--- a/private_dot_config/private_mpv/mpv.conf
+++ b/private_dot_config/private_mpv/mpv.conf
@@ -114,7 +114,8 @@ screenshot-template="%F-%P"
 # impact performance unless used for slow input such as network.)
 #cache-dir=~/.cache/
 #cache-on-disk=yes
-
+# Load Auto sub
+--sub-auto=all
 # Display English subtitles if available.
 #slang=en
 
