--- a/private_dot_config/private_mpv/mpv.conf
+++ b/private_dot_config/private_mpv/mpv.conf
@@ -95,8 +95,8 @@ cscale=ewa_lanczossharp
 # but also will break with shoutcast streams.
 #user-agent="Mozilla/5.0"
 
-screenshot-directory="~/pictures/mpvscreenshots"
-screenshot-template="%F-%P"
+screenshot-directory="~/pictures/screenshots"
+screenshot-template="mpv-%F-%P"
 # cache settings
 #
 # Use a large seekable RAM cache even for local input.
