--- a/private_dot_config/networkmanager-dmenu/config.ini
+++ b/private_dot_config/networkmanager-dmenu/config.ini
@@ -6,14 +6,18 @@ dmenu_command = /usr/local/bin/dmenu -c
 # # Rofi and dmenu are set to case insensitive by default `-i`
 # l = number of lines to display, defaults to number of total network options
 # fn = font string
-# Background
+# normal Background
 nb = #141414 
-# Foreground / Text color
+# normal Foreground / Text color
 nf = #ebdbb2
+# selected highlight bg
+shb = #141414
+# Selected highligh fg
+shf = #00ffff
 # Selected Background
-sb = #008080
+sb = #141414
 # Selected Foreground / Text Color
-sf = cyan
+sf = #008080
 # b =  (just set to empty value and menu will appear at the bottom
 # m = number of monitor to display on
 # p = Custom Prompt for the networks menu
