--- a/private_dot_config/private_gtk-3.0/settings.ini
+++ b/private_dot_config/private_gtk-3.0/settings.ini
@@ -4,7 +4,7 @@ gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-enable-event-sounds=0
 gtk-enable-input-feedback-sounds=0
-gtk-font-name=Lucida Grande Medium 10
+gtk-font-name=SF Pro Display 10
 gtk-icon-theme-name=WhiteSur-dark
 gtk-menu-images=1
 gtk-theme-name=WhiteSur-dark
