--- a/private_dot_config/private_mpv/input.conf
+++ b/private_dot_config/private_mpv/input.conf
@@ -30,13 +30,16 @@ F3 cycle-values video-aspect-override "16:9"
 F4 cycle-values video-aspect-override "4:3"
 
 s cycle sub
-d add sub-scale +0.1
-D add sub-scale -0.1
-a add sub-pos -1
-A add sub-pos +1
+S cycle sub down
+#S add previous-sub
+ctrl+d add sub-scale -0.1
+ctrl+u add sub-scale +0.1
+alt+d add sub-pos +1
+alt+u add sub-pos -1
 
 m cycle mute
 M cycle audio
+a cycle audio
 
 1 add brightness -1
 ! add brightness +1
@@ -47,7 +50,7 @@ SHARP add gamma 1
 4 add saturation -1
 $ add saturation 1
 
-S screenshot
+# S screenshot
 c ab-loop
 
 z add sub-delay -0.1
@@ -64,3 +67,4 @@ Alt+Shift+j add video-zoom +0.1
 Alt+Shift+k add video-zoom -0.1
 
 F5 cycle deinterlace 
+F11 cycle audio
