--- a/private_dot_config/private_mpv/mpv.conf
+++ b/private_dot_config/private_mpv/mpv.conf
@@ -54,9 +54,10 @@
 
 # Specify high quality video rendering preset (for --vo=gpu only)
 # Can cause performance problems with some drivers and GPUs.
-profile=gpu-hq
-scale=ewa_lanczossharp
-cscale=ewa_lanczossharp
+# TODO:: HIGH END 
+# profile=gpu-hq
+# scale=ewa_lanczossharp
+# cscale=ewa_lanczossharp
 
 # Force video to lock on the display's refresh rate, and change video and audio
 # speed to some degree to ensure synchronous playback - can cause problems
@@ -115,7 +116,7 @@ screenshot-template="mpv-%F-%P"
 #cache-dir=~/.cache/
 #cache-on-disk=yes
 # Load Auto sub
---sub-auto=all
+--sub-auto=fuzzy
 # Display English subtitles if available.
 #slang=en
 
