--- a/private_dot_config/private_mpv/mpv.conf
+++ b/private_dot_config/private_mpv/mpv.conf
@@ -96,7 +96,7 @@
 # but also will break with shoutcast streams.
 #user-agent="Mozilla/5.0"
 
-screenshot-directory="~/pictures/screenshots"
+screenshot-directory="~/media/screenshots"
 screenshot-template="mpv-%F-%P"
 # cache settings
 #
@@ -142,3 +142,5 @@ screenshot-template="mpv-%F-%P"
 
 #[eye-cancer]
 #sharpen=5
+# Resume 
+save-position-on-quit
