--- a/private_dot_config/fontconfig/fonts.conf
+++ b/private_dot_config/fontconfig/fonts.conf
@@ -1,36 +1,54 @@
 <?xml version='1.0'?>
-<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
+<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
+  <match target="font">
+    # <edit mode="assign" name="hinting">
+    #   <bool>true</bool>
+    # </edit>
+    # <edit mode="assign" name="autohint">
+    #   <bool>false</bool>
+    # </edit>
+    # <edit mode="assign" name="antialias">
+    #   <bool>true</bool>
+    # </edit>
+    <edit mode="assign" name="hintstyle">
+      <const>hintslight</const>
+    </edit>
+    <edit mode="assign" name="rgba">
+      <const>rgb</const>
+    </edit>
+    <edit mode="assign" name="lcdfilter">
+      <const>lcddefault</const>
+    </edit>
+  </match>
 	<alias>
 		<family>serif</family>
 		<prefer>
-			<family>New York</family>
-			<family>Apple Emoji</family>
-			<family>Joy Pixels</family>
+			<family>SF Mono</family>
+			# <family>Noto Sans</family>
+			<family>Noto Color Emoji</family>
 		</prefer>
 	</alias>
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
-			<family>SF Pro</family>
-			<family>Apple Emoji</family>
-			<family>Joy Pixels</family>
+			<family>SF Mono</family>
+			# <family>Noto Serif</family>
+			<family>Noto Color Emoji</family>
 		</prefer>
 	</alias>
 	<alias>
 		<family>sans</family>
 		<prefer>
-			<family>New York</family>
-			<family>Apple Emoji</family>
-			<family>Joy Pixels</family>
+			<family>SF Mono</family>
+			# <family>Noto Sans</family>
+			<family>Noto Color Emoji</family>
 		</prefer>
 	</alias>
 	<alias>
 		<family>monospace</family>
 		<prefer>
 			<family>SF Mono</family>
-			<family>Noto Sans Mono</family>
-			<family>Liberation Mono</family>
 		</prefer>
 	</alias>
 </fontconfig>
