--- a/private_dot_config/private_mpv/mpv.conf
+++ b/private_dot_config/private_mpv/mpv.conf
@@ -96,7 +96,7 @@
 # but also will break with shoutcast streams.
 #user-agent="Mozilla/5.0"
 
-screenshot-directory="~/media/screenshots"
+screenshot-directory="~/media/images/screenshots"
 screenshot-template="mpv-%F-%P"
 # cache settings
 #
