--- a/private_dot_config/transmission-daemon/private_settings.json
+++ b/private_dot_config/transmission-daemon/private_settings.json
@@ -12,13 +12,13 @@
     "blocklist-url": "http://www.example.com/blocklist",
     "cache-size-mb": 4,
     "dht-enabled": true,
-    "download-dir": "/home/mario/",
+    "download-dir": "/home/mario/downloads/torrent",
     "download-queue-enabled": true,
     "download-queue-size": 5,
     "encryption": 1,
     "idle-seeding-limit": 30,
     "idle-seeding-limit-enabled": false,
-    "incomplete-dir": "/home/mario/",
+    "incomplete-dir": "/home/mario/downloads/torrent",
     "incomplete-dir-enabled": false,
     "lpd-enabled": false,
     "message-level": 2,
