--- a/private_dot_config/mopidy/mopidy.conf
+++ b/private_dot_config/mopidy/mopidy.conf
@@ -29,13 +29,13 @@ metadata_timeout = 1000
 
 [spotify]
 enabled = true
-username = nodr1zwbna36gkaku9hp5d3yw 
-password = 434hRsproB2Rxy
-client_id = 9e6210b0-a754-4418-85d1-3bb0f6ce6510
-client_secret = zuxm8ZoQnrpV6ldxVQtPVoKjdSo7Hr5Py5DWqTHDUOQ=
+username = 
+password = 
+client_id = 
+client_secret = 
 # volume_normalization = true
 # private_session = false
-# timeout = 10
+timeout = 10
 allow_cache = true
 allow_network = true
 allow_playlists = true
