Fix zsh bitwarden and Vieb.tmpl

--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -43,7 +43,10 @@
 {{ end }}
 
 {{- if eq .chezmoi.os "darwin" -}}
-# adding only linux
+# adding only OSX
+!Library/*
+!Library/Application Support/*
+!Library/Application Support/Vieb/*
 {{ end }}
 
 {{- if eq .chezmoi.os "windows" -}}
@@ -53,6 +56,7 @@
 {{ if .secret }}
 !.ssh
 {{ end }}
+
 {{- else }}
 # Full Version
 # Ignore this file if OS != LINUX
