--- a/private_dot_config/fontconfig/fonts.conf
+++ b/private_dot_config/fontconfig/fonts.conf
@@ -2,15 +2,15 @@
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
   <match target="font">
-    # <edit mode="assign" name="hinting">
-    #   <bool>true</bool>
-    # </edit>
-    # <edit mode="assign" name="autohint">
-    #   <bool>false</bool>
-    # </edit>
-    # <edit mode="assign" name="antialias">
-    #   <bool>true</bool>
-    # </edit>
+     <!-- <edit mode="assign" name="hinting">
+       <bool>true</bool>
+     </edit>
+     <edit mode="assign" name="autohint">
+       <bool>false</bool>
+     </edit>
+     <edit mode="assign" name="antialias">
+       <bool>true</bool>
+	 </edit> -->
     <edit mode="assign" name="hintstyle">
       <const>hintslight</const>
     </edit>
@@ -25,7 +25,6 @@
 		<family>serif</family>
 		<prefer>
 			<family>SF Mono</family>
-			# <family>Noto Sans</family>
 			<family>Noto Color Emoji</family>
 		</prefer>
 	</alias>
@@ -33,7 +32,6 @@
 		<family>sans-serif</family>
 		<prefer>
 			<family>SF Mono</family>
-			# <family>Noto Serif</family>
 			<family>Noto Color Emoji</family>
 		</prefer>
 	</alias>
@@ -41,7 +39,6 @@
 		<family>sans</family>
 		<prefer>
 			<family>SF Mono</family>
-			# <family>Noto Sans</family>
 			<family>Noto Color Emoji</family>
 		</prefer>
 	</alias>
@@ -49,6 +46,9 @@
 		<family>monospace</family>
 		<prefer>
 			<family>SF Mono</family>
+			<family>JetBrainsMono Nerd Font Mono</family>
+			<family>Noto Color Emoji</family>
+			<family>nonicons</family>
 		</prefer>
 	</alias>
 </fontconfig>
