--- a/private_dot_config/kitty/general.conf
+++ b/private_dot_config/kitty/general.conf
@@ -1,7 +1,7 @@
 # enable nonicon for neovim
 font_size 12.0
+symbol_map U+f101-U+f208 nonicons
 symbol_map U+EA60-U+EBBC codicon
-symbol_map U+f101-U+f208 nonicon
 enabled_layouts splits
 # confirm_os_window_close 1
 enable_audio_bell no
