--- a/private_dot_config/tmux/keymap.conf
+++ b/private_dot_config/tmux/keymap.conf
@@ -25,7 +25,8 @@ bind s split-window
 #####################
 bind Q confirm-before kill-window
 bind q confirm-before kill-pane
-bind c confirm-before kill-pane
+bind c kill-pane
+# bind c confirm-before kill-pane
 bind M-q confirm-before kill-session
 bind M-e split-window -h "nvim $HOME/.config/tmux/tmux.conf"
 
@@ -33,8 +34,8 @@ bind M-e split-window -h "nvim $HOME/.config/tmux/tmux.conf"
 # Window
 #########################
 # Swap Window
-bind H  swap-window -t +1
-bind L  swap-window -t -1
+bind H  swap-window -t -1
+bind L  swap-window -t +1
 
 bind n new-window 
 bind -r M-h select-window -t :-
@@ -87,7 +88,6 @@ bind M-r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloade
 # auto renumber when windows closed
 set-option -g renumber-windows on
 set -g base-index 1
-# TODO:
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
