--- a/private_dot_config/kitty/general.conf
+++ b/private_dot_config/kitty/general.conf
@@ -1,5 +1,8 @@
+# vim: set ft=sh:
 # enable nonicon for neovim
 font_size 12.0
+#font_size 15.0
+font_family JetBrainsMono Nerd Font Mono
 symbol_map U+f101-U+f208 nonicons
 symbol_map U+EA60-U+EBBC codicon
 enabled_layouts splits
@@ -12,4 +15,4 @@ active_tab_font_style bold-italic
 inactive_tab_font_style normal
 scrollback_pager /usr/bin/nvim -u NONE -c "set laststatus=0 nonumber nolist showtabline=0 foldcolumn=0 clipboard=unnamedplus" -c "map q :qa!<CR>" -c "autocmd TermOpen * normal G" -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
 # scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
-# vim: set ft=sh:
+#hide_window_decorations no
