--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -8,7 +8,12 @@
 !.config
 .config/*
 
+# Symlink
+!.profile
+!.zprofile
+
 # adding on all OSes
+!.emacs.d
 !.config/kitty
 !.config/tmux
 !.config/zsh
@@ -36,6 +41,9 @@
 
 {{ if eq .chezmoi.os "linux" -}}
 # adding only linux
+!.xinitrc
+!.xprofile
+
 !.config/Vieb
 !.config/mimeapps.list
 !.config/newsboat
@@ -63,6 +71,7 @@
 
 {{- if eq .chezmoi.os "darwin" -}}
 # adding only OSX
+.hammerspoon
 !Library/*
 !Library/Application Support/*
 !Library/Application Support/Vieb/*
@@ -77,6 +86,7 @@
 {{ end }}
 
 {{- else }}
+
 # Full Version
 # Ignore this file if OS != LINUX
 {{- if ne .chezmoi.os "linux" }}
